--- a/styles/editor.css
+++ b/styles/editor.css
@@ -9,6 +9,11 @@
     border-radius: 4px;
 }
 
+.tox-notifications-container,
+.tox-statusbar__text-container {
+    display: none !important;
+}
+
 /* ======================  panel styles  ========================== */
 
 .cs-Editor .panel {
@@ -48,7 +53,6 @@
     font-weight: 600;
     background-color: #111111;
     color: white;
-
 }
 
 .cs-Editor .panel .work {
@@ -82,8 +86,10 @@
     left: 50%;
     bottom: 10px;
     transform: translateX(-50%);
-    width: 350px;
+    width: auto;
+    min-width: fit-content;
     height: 40px;
+    text-transform: capitalize;
     display: block;
     background-color: black;
     z-index: 100000;
@@ -99,6 +105,8 @@
 
 .cs-Editor .helper span {
     width: calc(100% / 2);
+    min-width: fit-content;
+    padding: 0 10px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -385,7 +393,8 @@
     font-weight: 600;
 }
 
-.QuestionsPlan .plan .question .ques {
+.QuestionsPlan .plan .question .ques,
+.QuestionsPlan .plan .solu {
     position: relative;
     width: 100%;
     height: auto;
@@ -393,6 +402,29 @@
     display: block;
     font-size: 13px;
     padding: 10px;
+}
+
+.QuestionsPlan .plan .solu {
+    margin: 35px 0 10px 0;
+    min-height: 50px;
+    border: 1px black solid;
+    box-shadow: 5px 5px 5px #1b1b1b0d, -6px -5px 10px white;
+}
+.QuestionsPlan .plan .solu::before {
+    position: absolute;
+    top: -20px;
+    left: 10px;
+    width: 100px;
+    min-width: 100px;
+    height: 20px;
+    content: 'Question';
+    background-color: #57c574;
+    border-radius: 5px 5px 0 0;
+    color: white;
+    text-align: center;
+    font-size: 13px;
+    content: 'Solution';
+    font-weight: 600;
 }
 
 .QuestionsPlan .plan .image {
@@ -452,10 +484,12 @@
 .QuestionsPlan .plan .ans {
     width: 100%;
     height: auto;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     min-height: 100px;
     box-shadow: 5px 5px 5px #a9a9a90d, -6px -5px 10px #ffffff85;
     padding: 7px;
+    cursor: default;
 }
 
 .QuestionsPlan .plan .ans .answer {
@@ -470,6 +504,7 @@
     background-color: transparent;
     border: 1px #0000000f solid;
     margin: 10px 0;
+    cursor: text;
     transition: ease-in-out 0.4s;
     font-size: 13px;
 }
@@ -504,10 +539,67 @@
     background-color: #111111;
 }
 
+.QuestionsPlan .plan .ans .image_answer {
+    position: relative;
+    width: 150px;
+    height: 100px;
+    border-radius: 10px;
+    line-height: 20px;
+    display: flex;
+    background-color: transparent;
+    border: 1px #0000000f solid;
+    margin: 10px 0;
+    transition: ease-in-out 0.4s;
+    font-size: 13px;
+    margin: 15px;
+    overflow: hidden;
+}
+.QuestionsPlan .plan .ans .image_answer input {
+    position: absolute;
+    opacity: 0;
+}
+
+.QuestionsPlan .plan .ans .image_answer label {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex: 1;
+    cursor: grab;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.QuestionsPlan .plan .ans .image_answer label:active {
+    cursor: grabbing;
+}
+
+.QuestionsPlan .plan .ans .image_answer .imgLabel {
+    width: fit-content;
+    min-width: fit-content;
+    height: 25px;
+    color: white;
+    display: flex;
+    background-color: #06c;
+    content: 'Add image';
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    padding: 0 5px;
+    line-height: 25px;
+    font-size: 12px;
+    text-transform: capitalize;
+    user-select: none;
+}
+
+.QuestionsPlan .plan .ans .image_answer .imgLabel.correct {
+    background-color: #57c574;
+}
 /* ======================= end ====================== */
 
 .delete {
-    width: 50%;
+    width: 70%;
     height: 40px;
     display: block;
     text-align: center;
@@ -516,5 +608,6 @@
     margin: 0 auto;
     background-color: red;
     color: #f3f3f3;
+    font-weight: 600;
     cursor: pointer;
 }
